[package]
name = "kdisplay"
version = "0.1.0"
edition = "2021"
description = "Prototype exploring palettes and dithering."
license = "BSD0"
repository = "https://github.com/kirinokirino/kdisplay"
readme = "README.md"
keywords = ["graphics"]
categories = ["graphics"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.22", features = ["rkyv", "fast-math", "debug-glam-assert"] }
minifb = { version = "0.23", default-features = false, features = ["x11"] }
nanorand = "0.7"
rgb = "0.8"
image = "0.24"
anyhow = "1.0.66"


#once_cell = "1.16"
#indexmap = { version = "1.9" }
#tinyvec = { version = "1.6", features = ["std"] }
#memmap2 = "0.5"

[profile.dev.package."*"]
opt-level=3
