[package]
name = "kdisplay"
version = "0.1.0"
edition = "2021"
description = "Prototype exploring palettes and dithering."
license = "BSD0"
repository = "https://github.com/kirinokirino/kdisplay"
readme = "README.md"
keywords = ["graphics"]
categories = ["graphics"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.22", features = ["fast-math", "debug-glam-assert"] }
rgb = "0.8"
image = { version = "0.24", default-features = false, features = ["png"]}
anyhow = "1.0.66"
memmap2 = { version = "0.9" }

delta_e = "0.2"
lab = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

#once_cell = "1.16"
#indexmap = { version = "1.9" }
#tinyvec = { version = "1.6", features = ["std"] }
#memmap2 = "0.5"

[profile.dev.package."*"]
opt-level=3
